<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp">

    <EditText
        android:id="@+id/project_name_edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#DFDFDF"
        android:hint="@string/project_name_edit_text"
        android:inputType="text"
        android:paddingBottom="10dp"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/project_color_edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/color_text_view"
        android:textSize="30sp" />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioGroup
            android:layout_width="0dp"
            android:id="@+id/radio_group_left"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatRadioButton
                android:id="@+id/greenRadioButton"
                style="@style/ColorRadioButton"
                android:background="@color/green"
                android:text="@string/green_radio_button" />

            <androidx.appcompat.widget.AppCompatRadioButton
                android:id="@+id/orangeRadioButton"
                style="@style/ColorRadioButton"
                android:background="@color/orange"
                android:text="@string/orange_radio_button" />

            <androidx.appcompat.widget.AppCompatRadioButton
                android:id="@+id/pinkRadioButton"
                style="@style/ColorRadioButton"
                android:background="@color/pink"
                android:text="@string/pink_radio_button" />

            <androidx.appcompat.widget.AppCompatRadioButton
                android:id="@+id/brownRadioButton"
                style="@style/ColorRadioButton"
                android:background="@color/brown"
                android:text="@string/brown_radio_button" />

            <androidx.appcompat.widget.AppCompatRadioButton
                android:id="@+id/oliveRadioButton"
                style="@style/ColorRadioButton"
                android:background="@color/olive"
                android:text="@string/olive_radio_button" />

            <androidx.appcompat.widget.AppCompatRadioButton
                android:id="@+id/indigoRadioButton"
                style="@style/ColorRadioButton"
                android:background="@color/indigo"
                android:text="@string/indigo_radio_button" />

        </RadioGroup>

        <RadioGroup
            android:layout_width="0dp"
            android:id="@+id/radio_group_right"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatRadioButton
                android:id="@+id/greyRadioButton"
                style="@style/ColorRadioButton"
                android:background="@color/grey"
                android:text="@string/grey_radio_button" />

            <androidx.appcompat.widget.AppCompatRadioButton
                android:id="@+id/purpleRadioButton"
                style="@style/ColorRadioButton"
                android:background="@color/purple"
                android:text="@string/purple_radio_button" />

            <androidx.appcompat.widget.AppCompatRadioButton
                android:id="@+id/redRadioButton"
                style="@style/ColorRadioButton"
                android:background="@color/red"
                android:text="@string/red_radio_button" />

            <androidx.appcompat.widget.AppCompatRadioButton
                android:id="@+id/lightGreenRadioButton"
                style="@style/ColorRadioButton"
                android:background="@color/light_green"
                android:text="@string/light_green_radio_button" />

            <androidx.appcompat.widget.AppCompatRadioButton
                android:id="@+id/yellowRadioButton"
                style="@style/ColorRadioButton"
                android:background="@color/yellow"
                android:text="@string/yellow_radio_button" />

            <androidx.appcompat.widget.AppCompatRadioButton
                android:id="@+id/blueRadioButton"
                style="@style/ColorRadioButton"
                android:background="@color/blue"
                android:text="@string/blue_radio_button" />

        </RadioGroup>
    </RadioGroup>

    <Button
        android:id="@+id/creating_project_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/create_project_button"
        android:textSize="23sp"
        android:enabled="false"/>

</LinearLayout>
